# hindley_milner

./: Cargo.toml  README.md
examples/: prelude
src/: ast.rs  context.rs  main.rs  parser.rs  reduce.rs  solver.rs  term.rs  ty.rs
