[package]
name = "hindley_milner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.4"
clap = { version = "4.3.12", features = ["derive"] }
internment = "0.7.1"
peg = "0.8.1"
rustyline = { version = "12.0.0", features = ["derive"] }
